# test_spdlog

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
.github/workflows/: ci.yml
